platform/firefox/firefox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefox
  namespace: firefox
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/name: firefox
    app.kubernetes.io/component: browser
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: firefox
    app.kubernetes.io/component: browser

  ports:
    - name: http
      port: 5800
      targetPort: http
      protocol: TCP
