platform/firefox/oauth2-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firefox-oauth2-proxy
  namespace: firefox
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app.kubernetes.io/name: firefox
    app.kubernetes.io/component: oauth2-proxy
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: firefox
    app.kubernetes.io/component: oauth2-proxy

  ports:
    - name: http
      port: 4180
      targetPort: http
      protocol: TCP

    - name: metrics
      port: 44180
      targetPort: metrics
      protocol: TCP
